update document title

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
-    <title>Hello I'm Maxime</title>
+    <title>Hello I'm Max</title>
   </head>
   <body>
     <noscript>
