Arrow icon credits

--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,6 @@
       I can't show you anything without Javascript 😭
     </noscript>
     <div id="root"></div>
+    <!-- Arrow icon created by Landan Lloyd from the Noun Project -->
   </body>
 </html>
