--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway">
     <title>Hello I'm Max</title>
+    <!-- OpenGraph -->
+    <meta property="og:url" content="https://m-vdb.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Hello I'm Max">
+    <meta property="og:image" content="https://m-vdb.github.io/og-picture.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="700">
+    <meta property="og:image:height" content="700">
+    <meta property="og:description" content="Looking for a full-time Software Engineer position in Berlin, Germany or remote starting November 2017.">
   </head>
   <body>
     <noscript>
