--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://m-vdb.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Hello I'm Max">
-    <meta property="og:image" content="https://m-vdb.github.io/og-picture.png">
+    <meta property="og:image" content="https://m-vdb.github.io/static/media/og-picture.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="700">
     <meta property="og:image:height" content="700">
